find_package(Curses)
if (CURSES_FOUND AND NOT FIPS_IOS)
    fips_ide_group(examples/kc85)
    fips_begin_app(kc85-ascii cmdline)
        fips_files(kc85-ascii.c)
        fips_deps(keybuf roms curses)
    fips_end_app()
    fips_ide_group(examples/c64)
    fips_begin_app(c64-ascii cmdline)
        fips_files(c64-ascii.c)
        fips_deps(keybuf roms curses)
    fips_end_app()
    fips_begin_app(c64-sixel cmdline)
        fips_files(c64-sixel.c)
        fips_deps(keybuf roms curses)
    fips_end_app()
    fips_begin_app(c64-kitty cmdline)
        fips_files(c64-kitty.c)
        fips_deps(keybuf roms curses)
    fips_end_app()
endif()
